--- a/template05.html
+++ b/template05.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Front-Endeiros do Senac</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 
 <body>
@@ -17,12 +18,17 @@
         </h1>
         <!--Menu Principal-->
         <nav>
+            <i class="fas fa-home"></i>
             <a href="index.html">INÍCIO</a>
+            <i class="far fa-file"></i>
             <a href="article.html">ARTIGOS</a>
+            <i class="far fa-newspaper"></i>
             <a href="news.html">NOTÍCIA</a>
+            <i class="fas fa-address-book"></i>
             <a href="contacts.html">CONTATOS</a>
+            <i class="far fa-comment-dots"></i>
             <a href="abou.html">SOBRE</a>
-        </nav>
+           
 
     </header>
 
@@ -46,11 +52,12 @@
         </aside>
         <!--Rodapé-->
         <footer>
-            <p><a href="index.html" >🏠</a></p>
+            <i class="fas fa-home"></i>
             ©
-            <p><a href="#top" >⇧</a></p>
+            <i class="fas fa-arrow-up"></i>
         </footer>
     </main>
 </body>
 
 </html>
+© 2021 GitHub, In
