--- a/template07.html
+++ b/template07.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="Pt/br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <title>Front-Endeiros do Senac</title>
-    <link>
+    <link rel="shortcut icon" href="assets/img/html5.png">
 </head>
 
 <body>
@@ -14,16 +15,15 @@
     <!--Cabeçalho-->
     <header>
         <a href="index.html"><img src="assets/img/html5.png" alt="Logo do Site"></a>
-        <h1>
-            Front-Endeiros do Senac
-        </h1>
+        <h1>Front-Endeiros do Senac</h1>
+        
         <!--Menu Principal-->
         <nav>
-            <a href="index.html">INÍCIO</a>
-            <a href="article.html">ARTIGOS</a>
-            <a href="news.html">NOTÍCIA</a>
-            <a href="contacts.html">CONTATOS</a>
-            <a href="abou.html">SOBRE</a>
+            <a href="index.html"><i class="fas fa-home"></i> Início</a>
+            <a href="article.html"><i class="far fa-file"></i> Artigos</a>
+            <a href="news.html"><i class="far fa-newspaper"></i> Notícias</a>
+            <a href="contacts.html"><i class="fas fa-address-book"></i>Contato</a>
+            <a href="abou.html"><i class="far fa-comment-dots"></i> Sobre</a>
         </nav>
 
     </header>
@@ -42,17 +42,23 @@
                 officiis dolorum voluptates error architecto vero incidunt facilis eligendi vitae quo obcaecati! Quod
                 corporis nihil temporibus!</p>
         </article>
+
         <!--Barra Lateral-->
         <aside>
-
+            <h3>Barra lateral</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptatum fugit id! Minima odio vero,
+                esse expedita voluptates magnam consectetur iure unde modi voluptate earum atque ex. Dolores, impedit
+                eius.</p>
         </aside>
-        <!--Rodapé-->
-        <footer>
-            <p><a href="index.html" >🏠</a></p>
-            ©
-            <p><a href="#top" >⇧</a></p>
-        </footer>
+
     </main>
+
+    <!--Rodapé-->
+    <footer>
+        <a href="index.html"><i class="fas fa-home"></i></a>
+        <div><i class="far fa-copyright"></i> 2021 Formação .Net 2021.1</div>
+        <a href="#top"><i class="fas fa-arrow-circle-up"></i></a>
+    </footer>
 </body>
 
 </html>
