--- a/template02.html
+++ b/template02.html
@@ -17,11 +17,11 @@
         </h1>
         <!--Menu Principal-->
         <nav>
-<a href="index.html">INÍCIO</a>
-<a href="article.html">ARTIGOS</a>
-<a href="news.html">NOTÍCIA</a>
-<a href="contacts.html">CONTATOS</a>
-<a href="abou.html">SOBRE</a>
+<a href="index.html">Início</a>
+<a href="article.html">Artigos</a>
+<a href="news.html">Notícias</a>
+<a href="contacts.html">Contatos</a>
+<a href="abou.html">Sobre</a>
         </nav>
 
     </header>
